package G2A;

message RegisterSession {
	required string callback_id = 1;
	required string k_id = 2;
} // end

message UnregisterSession {
	required string callback_id = 1;
	required string session_id = 2;
} // end

message UpdateSession {
	required string callback_id = 1;
	required string session_id = 2;
} // end

message TraceStartGame {
	required string session_id = 1;
	required int64 start_time = 2;
	required bool double_exp = 3;
} // end

message UpdateEndGameSession {
	required string callback_id = 1;
	required string session_id = 2;
} // end
